# bevy_observer_pattern

./: Cargo.toml
src/: impls.rs  lib.rs
