[package]
name = "bevy_observer_pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.0", default_features = false, features = ["bevy_asset"]}

[features]
default = ["bevy_ui"]
bevy_ui = ["bevy/bevy_winit"]